Clean up placeholder content, fix typos, and improve consistency
- Fix header guard typo: SIMPLY_LIBRARY_H → SIMPLE_LIBRARY_H
- Add explicit return 0 to simple-c-app/main.c
- Replace TODO in simple-c-app/CMakeLists.txt with an explanatory comment
- Replace "Hello world!" Javadoc on both App classes with meaningful descriptions
- Fix printf spacing: addOne(%d)= %d → addOne(%d) = %d in simple-jni
- Fix URL in both pom.xml files (remove FIXME comment, set https://lofthouse.dev/)
- Remove unused junit-jupiter-params dependency from both pom.xml files
- Replace assertTrue(true) placeholder tests with @Disabled skeletons explaining
  that native libraries require java.library.path / LD_LIBRARY_PATH
- Add comment in jni-library.c explaining unused JNIEnv*/jclass parameters
- Remove duplicate "# Link the shared library" comment in jni-library/CMakeLists.txt
- Normalise run-app.sh continuation indent to 4 spaces in simple-foreign
- Delete empty simple-foreign/.mvn/jvm.config and maven.config files

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>