@@ -1,7 +1,6 @@
 package dev.lofthouse;
 
-import static org.junit.jupiter.api.Assertions.assertTrue;
-
+import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 
 /**
@@ -10,10 +9,13 @@ import org.junit.jupiter.api.Test;
 public class AppTest {
 
     /**
-     * Rigorous Test :-)
+     * Integration tests that invoke native libraries require the library to be
+     * on LD_LIBRARY_PATH and need --enable-native-access=ALL-UNNAMED.
+     * Run the application with run-app.sh instead of as a unit test.
      */
+    @Disabled("Native library must be on LD_LIBRARY_PATH; use run-app.sh to run")
     @Test
-    public void shouldAnswerWithTrue() {
-        assertTrue(true);
+    public void testAddOne() {
+        // assertEquals(6, (int) addOneMethodHandle.invokeExact(5));
     }
 }
